# ComfortWitnessCrawler

./: ai_summary_service.py  app.py  models.py  news_scraper.py  pyproject.toml  replit.md  routes.py
instance/: comfort_women_news.db
static/css/: custom.css
static/js/: main.js
templates/: archive.html  article.html  base.html  index.html  search.html
